# Email_Triage

./: .huggingignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  upload.py  validate-submission.sh
backups/: bk_1_email_environment.py  bk_app.py  bk_email_environment.py  bk_inference.py  bk_models.py
server/: .dockerignore  Dockerfile  app.py  email_environment.py  requirements.txt
